--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="/index.html">Home</a>
                 <a href="/projects.html">Projects</a>
                 <a href="/services.html">Services</a>
-                <a href="#contact">Contact</a>
+                <a href="/contact">Contact</a>
             </nav>
         </div>
     </header>
@@ -51,7 +51,6 @@
             </div>
         </section>
 
-
         <section id="services" class="services">
             <div class="container">
                 <h2>Services</h2>
@@ -60,7 +59,7 @@
                     <div class="service">
                         <figure class="img-box">
                             <img src="./assets/homewater.jpeg" alt="Home Service" class="img" />
-                            <figcaption>Thefieds</figcaption>
+                            <figcaption>Splash At Home</figcaption>
                         </figure>
                         <div class="content">
                             <h3>Home
@@ -81,7 +80,7 @@
                     <div class="service">
                         <figure class="img-box">
                             <img src="./assets/businesswater.jpeg" alt="Business Service" class="img" />
-                            <figcaption>Thefieds</figcaption>
+                            <figcaption>Splash In The Office</figcaption>
                         </figure>
                         <div class="content">
                             <h3>Business
@@ -103,7 +102,7 @@
                     <div class="service">
                         <figure class="img-box">
                             <img src="./assets/drinkingwater.jpeg" alt="Drinking Service" class="img" />
-                            <figcaption>Thefieds</figcaption>
+                            <figcaption>Splash with a cup</figcaption>
                         </figure>
                         <div class="content">
                             <h3>Drinking
@@ -125,7 +124,7 @@
                     <div class="service">
                         <figure class="img-box">
                             <img src="./assets/oceanwater.jpeg" alt="Ocean Service" class="img" />
-                            <figcaption>splash</figcaption>
+                            <figcaption>Splash in the Ocean</figcaption>
                         </figure>
                         <div class="content">
                             <h3>Ocean
@@ -269,7 +268,6 @@
                 </form>
             </div>
         </section>
-
 
     </main>
 
